# tuttle

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  app.py  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  tuttle.code-workspace
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: flet-pack.yml  pack-app.yml  pyinstaller-build.yml  python-package.yml
app/: Tuttle.py  Tuttle2.py  app.py  demo.py  gui.py  layout.py  main.py  views.py  widgets.py
app/auth/: data_source.py  intent.py  (+1 more)
app_demo/: Tuttle.py  layout.py  views.py  widgets.py
docs/: Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  usage.rst
notebooks/: dev-calendar-integration.ipynb  dev-data-model.ipynb  dev-delete-integrity.ipynb  dev-icloud-cal.ipynb  dev-import-model.ipynb  dev-income-tax-formula-germany.ipynb  dev-invoice-number.ipynb  dev-invoice.ipynb  dev-model-form.ipynb  dev-test-ipywidgets.ipynb  dev-test-jinja2.ipynb  dev-total-time-tracked.ipynb  dialog-setup.ipynb  dialog-user-setup.ipynb  flow-import-time-tracking.ipynb  test-compose-email.ipynb  test-timesheet-icloud.ipynb
scripts/: build_app.py  pack_app.py  run_app.py  test.py
tests/: __init__.py  conftest.py  test_app.py  test_calendar.py  test_controller.py  test_invoice.py  test_model.py  test_tax.py  test_timetracking.py  test_tuttle.py
tuttle/: __init__.py  app.py  banking.py  billing.py  calendar.py  cloud.py  context.py  controller.py  dataviz.py  demo.py  dev.py  forecast.py  invoice.py  invoicing.py  mail.py  model.py  os_functions.py  preferences.py  project.py  rendering.py  schema.py  tax.py  time.py  timetracking.py  ui.py  view.py
tuttle_tests/: __init__.py  conftest.py  demo.py  demo_objects.py  test_calendar.py  test_controller.py  test_demo.py  test_invoice.py  test_model.py  test_rendering.py  test_timetracking.py
tuttle_ui/: main.py  routes.py  routing.py
(+381 files in other folders)
