[tool.poetry]
name = "tuttle"
version = "0.1.0"
description = "Less paperwork. More excitement."
authors = ["Christian Staudt <mail@clstaudt.me>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.4"
pandas = "^1.3.4"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
vega-datasets = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
