[bumpversion]
current_version = 0.2.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:tuttle/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
description-file = README.md
license_files = LICENSE

[isort]
include_trailing_comma=True
use_parentheses=True
multi_line_output=1
default_section = THIRDPARTY
known_first_party = tuttle
known_flet = flet
known_typing = typing
sections = FUTURE,TYPING,STDLIB,FLET,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
